--- a/app/views/admin/donasi/index.html
+++ b/app/views/admin/donasi/index.html
@@ -600,8 +600,8 @@
                                         </div>
                                     </div>
                                     <div class="col-8 text-right small">
-                                        <div>Jl. Kuningan Raya No. 86</div>
-                                        <div>Antapani, Kota Bandung</div>
+                                        <div>Jl. Batik Halus No. 17</div>
+                                        <div>Pahlawan, Kota Bandung</div>
                                         <div class="font-weight-bolder"><i class="fab fa-whatsapp"></i>
                                             0812-1333-1113</div>
                                     </div>
