--- a/public/assets/pojok-berbagi-style.css
+++ b/public/assets/pojok-berbagi-style.css
@@ -185,6 +185,7 @@ img::after {
     display: flex;
     justify-content: center;
     align-items: center;
+    color: var(--bs-secondary);
 }
 
 /* Akhir Utilitas, Reset & Root */
