--- a/app/views/admin/bantuan/formulir.html
+++ b/app/views/admin/bantuan/formulir.html
@@ -433,7 +433,7 @@
             <div class="card-header bg-transparent">
                 <div class="row align-items-center">
                     <div class="col">
-                        <h6 class="text-uppercase text-muted ls-1 mb-1">Program</h6>
+                        <h6 class="text-uppercase text-muted ls-1 mb-1">campaign</h6>
                         <h5 class="h3 mb-0">Bantuan Diajukan</h5>
                     </div>
                 </div>
@@ -470,7 +470,7 @@
             <div class="card-header bg-transparent">
                 <div class="row align-items-center">
                     <div class="col">
-                        <h6 class="text-uppercase text-muted ls-1 mb-1">Program</h6>
+                        <h6 class="text-uppercase text-muted ls-1 mb-1">campaign</h6>
                         <h5 class="h3 mb-0">Bantuan Berjalan</h5>
                     </div>
                 </div>
@@ -507,7 +507,7 @@
             <div class="card-header bg-transparent">
                 <div class="row align-items-center">
                     <div class="col">
-                        <h6 class="text-uppercase text-muted ls-1 mb-1">Program</h6>
+                        <h6 class="text-uppercase text-muted ls-1 mb-1">campaign</h6>
                         <h5 class="h3 mb-0">Bantuan Selesai</h5>
                     </div>
                 </div>
