--- a/app/views/admin/bantuan/selengkapnya.html
+++ b/app/views/admin/bantuan/selengkapnya.html
@@ -2,7 +2,7 @@
     <div class="col">
         <div class="card">
             <div class="card-header d-flex justify-content-between align-items-center border-0">
-                <h2 class="mb-0">Daftar Program</h2>
+                <h2 class="mb-0">Daftar Deskripsi Campaign</h2>
                 <div class="btn btn-primary d-flex align-items-center justify-content-center"
                     data-toggle="modal" data-target="#modalBuatSelengkapnya">
                     <span class="d-none d-md-block">Buat Selengkapnya Baru</span>
@@ -10,44 +10,66 @@
                 </div>
             </div>
             <div class="card-body p-0">
-                <table class="table align-items-center mb-0 table-hover table-borderless">
+                <table class="table align-items-center mb-0 table-hover table-borderless table-responsive" id="list-deskripsi-selengkapnya">
                     <thead class="thead-light">
                         <tr>
-                            <th scope="col" class="sort" data-sort="id">Program</th>
+                            <?php if (count(is_countable($data['deskripsi']['data']) ? $data['deskripsi']['data'] : []) > 0) { ?>
+                            <th scope="col" class="sort fit" data-sort="id-deskripsi">Program</th>
+                            <th scope="col" class="sort" data-sort="judul">Judul</th>
                             <th scope="col" class="fit"></th>
+                            <?php } else { ?>
+                            <th scope="col" class="sort fit" data-sort="id-deskripsi">Program</th>
+                            <?php } ?>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <th scope="row">
+                    <tbody<?= (isset($this->data['deskripsi']['limit']) ? ' data-limit="'. $this->data['deskripsi']['limit'] .'"' : '') ?>>
+                        <?php 
+                        if (count(is_countable($data['deskripsi']['data']) ? $data['deskripsi']['data'] : []) > 0) { 
+                            foreach($data['deskripsi']['data'] as $key => $dataDeskripsi) {
+                        ?>
+                        <tr data-id-deskripsi="<?= $dataDeskripsi->id_deskripsi; ?>">
+                            <th scope="row" class="fit">
                                 <div class="d-flex flex-column">
-                                    <a href="#" class="font-weight-bolder">
-                                        3
-                                    </a>
-                                    <span class="mb-0">19 November 2022 15:00:00</span>
+                                        <a href="<?= (is_null($dataDeskripsi->id_bantuan) ? '#' : '/admin/bantuan/data/' . $dataDeskripsi->id_bantuan); ?>" class="font-weight-bolder">
+                                            <?= '<span>' . $dataDeskripsi->nama_bantuan . '</span>'; ?>
+                                        </a>
+                                    <span class="mb-0"><?= $dataDeskripsi->create_at; ?></span>
                                 </div>
                             </th>
+                            <td><?= '<span>' . $dataDeskripsi->judul . '</span>'; ?></td>
                             <td class="text-right">
                                 <div class="dropdown">
-                                    <a class="btn btn-sm btn-icon-only text-light" href="#"
+                                    <span>
+                                        <a class="btn btn-sm btn-icon-only text-light" href="#"
                                         role="button" data-toggle="dropdown"
                                         aria-haspopup="true" aria-expanded="false">
-                                        <i class="fas fa-ellipsis-v"></i>
-                                    </a>
+                                            <i class="fas fa-ellipsis-v"></i>
+                                        </a>
+                                    </span>
                                     <div
                                         class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
                                         <a class="dropdown-item font-weight-bold" href="#">Lihat Isi</a>
                                         <a class="dropdown-item font-weight-bold text-warning" href="#">Ubah Isi</a>
-                                        <a class="dropdown-item font-weight-bold text-danger" href="#">Hapus</a>
+                                        <a class="dropdown-item font-weight-bold text-danger" href="#">Reset</a>
                                     </div>
                                 </div>
                             </td>
                         </tr>
+                        <?php } } else { ?>
+                        <tr>
+                            <th><span>Data deskripsi tidak ditemukan ...</span></th>
+                        </tr>
+                        <?php } ?>
                     </tbody>
                     <tfoot class="tfoot-light">
                         <tr>
-                            <th scope="col" class="sort" data-sort="id">Program</th>
+                            <?php if (count(is_countable($data['deskripsi']['data']) ? $data['deskripsi']['data'] : []) > 0) { ?>
+                            <th scope="col" class="sort fit" data-sort="id-deskripsi">Program</th>
+                            <th scope="col" class="sort" data-sort="judul">Judul</th>
                             <th scope="col" class="fit"></th>
+                            <?php } else { ?>
+                            <th scope="col" class="sort fit" data-sort="id-deskripsi">Program</th>
+                            <?php } ?>
                         </tr>
                     </tfoot>
                 </table>
@@ -56,13 +78,14 @@
                 <div class="row align-items-center">
                     <div class="col">
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Cari.." name="search"
-                                autocomplete="off">
+                            <?php echo (isset($data['deskripsi']['search']) ? '<input type="text" class="form-control" placeholder="Cari.." name="search" autocomplete="off" value="'. Output::decodeEscape($data['deskripsi']['search']) .'">' : '<input type="text" class="form-control" placeholder="Cari.." name="search" autocomplete="off">' ); ?>
                         </div>
                     </div>
                     <div class="col">
-                        <ul class="pagination justify-content-end mb-0" data-pages="10">
-                        </ul>
+                        <nav aria-label="...">
+                            <ul class="pagination justify-content-end mb-0" data-pages="<?= $this->data['deskripsi']['pages']; ?>">
+                            </ul>
+                        </nav>
                     </div>
                 </div>
             </div>
@@ -110,4 +133,8 @@
             </div>
         </div>
     </div>
+</div>
+
+<div aria-live="polite" aria-atomic="true"
+    class="position-fixed d-flex justify-content-end flex-column align-items-end">
 </div>
