--- a/app/views/default/bantuan/kategori.html
+++ b/app/views/default/bantuan/kategori.html
@@ -62,7 +62,7 @@
             <div class="col-lg-4 col-md-6 col-12 wow fadeInUp" data-wow-delay="<?= $delay_card.'s'; ?>"
                 data-id-bantuan="<?= $list_bantuan->id_bantuan; ?>">
                 <!-- Start Single Service -->
-                <div class="p-4 single-service animation">
+                <a class="p-4 single-service animation d-block" href="<?= '/bantuan/detil/'. $list_bantuan->id_bantuan; ?>">
                     <div
                         class="app-image img-wrapper rounded-box top overflow-hidden d-flex justify-content-center align-items-center position-relative mb-3">
                         <img src="<?= $list_bantuan->path_gambar_medium; ?>"
@@ -100,10 +100,10 @@
                             aria-valuenow="<?= $list_bantuan->persentase_donasi_disalurkan; ?>" <?='style="width: ' .
                             $list_bantuan->persentase_donasi_disalurkan .'%"'; ?>></div>
                     </div>
-                    <a href="<?= '/bantuan/detil/'. $list_bantuan->id_bantuan; ?>" class="mt-3"
+                    <!-- <a href="<?= '/bantuan/detil/'. $list_bantuan->id_bantuan; ?>" class="mt-3"
                         <?=(isset($list_bantuan->warna) ? 'style="color:' . $list_bantuan->warna .'"' : '') ?>>Lihat
-                        lebih lanjut <i class="lni lni-arrow-right"></i></a>
-                </div>
+                        lebih lanjut <i class="lni lni-arrow-right"></i></a> -->
+                </a>
                 <!-- End Single Service -->
             </div>
             <?php }} else { ?>
