--- a/public/assets/route/admin/core/css/editor.css
+++ b/public/assets/route/admin/core/css/editor.css
@@ -13,12 +13,29 @@
     font-family: inherit !important;
 }
 
-#wyswyg-area .rounded.ql {
+.rounded.ql {
     border: 1px solid #dee2e6 !important;
     transition: all .15s ease-in-out !important;
 }
 
-#wyswyg-area .rounded.ql.focused {
+.rounded.ql.is-invalid {
+    border-color: #fb6340 !important;
+}
+
+.rounded.ql.is-invalid.focused {
+    border-color: #fb6340 !important;
+    box-shadow: 0 0 0 0.2rem rgba(220,53,69,.25) !important;
+}
+
+.rounded.ql.is-invalid .ql-editor.ql-blank::before{
+    color: #fb6340 !important;
+    background-repeat: no-repeat;
+    background-position: center right;
+    background-size: calc(.75em + .375rem) calc(.75em + .375rem);
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23dc3545' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
+}
+
+.rounded.ql.focused {
     border-color: #5e72e4 !important;
     box-shadow: 0 0 0 0.2rem rgb(94 114 228 / 25%) !important;
 }
