--- a/public/assets/route/default/pages/css/home.css
+++ b/public/assets/route/default/pages/css/home.css
@@ -28,7 +28,7 @@ header.header+.hero-area {
     margin-bottom: 0.5em;
     text-overflow: ellipsis;
     overflow: hidden;
-    white-space: nowrap;
+    /* white-space: nowrap; */
 }
 
 .hero-area .hero-content h1>* {
