--- a/app/views/default.html
+++ b/app/views/default.html
@@ -9,15 +9,19 @@
     <meta property="og:title" content="Pojok Berbagi Indonesia">
     <meta property="og:url" content="https://pojokberbagi.id">
     <meta property="og:description" content="Tempat bagi gerakan kebaikan (social movement) dan kemanusiaan.">
-    <meta property="og:image" content="/assets/images/brand/pojok-berbagi-transparent.png">
+    <meta property="og:image" content="https://pojokberbagi.id/assets/images/img-1-1000x600.jpg">
+    <meta property="og:image:width" content="300">
+    <meta property="og:image:height" content="169">
+    <meta property="og:image:alt" content="img-1-1000x600.jpg">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="id_ID">
     <meta property="og:locale:alternate" content="en_US">
     <meta property="og:locale:alternate" content="ar_QA">
+    <meta property="fb:app_id" content="1046656459713066"/>
     <meta name="twiter:card" content="Tempat bagi gerakan kebaikan (social movement) dan kemanusiaan.">
     <meta name="twiter:site" content="@pojok_berbagi">
     <meta name="twiter:creator" content="@pojok_berbagi">
-    <meta name="facebook-domain-verification" content="xmnklhqeygng0kcohwlzaka45pu0km" />
+    <meta name="facebook-domain-verification" content="b8es9uq1temep9f2kg19dn43axauya" />
     <title>
         <?= $this->getTitle() . Config::get('defaults/default_title') ?>
     </title>
