--- a/public/assets/route/admin/core/css/admin-style.css
+++ b/public/assets/route/admin/core/css/admin-style.css
@@ -140,6 +140,7 @@ table.load a {
     pointer-events: none !important;
 }
 
+table.load span,
 table.load a i {
     color: transparent !important;
 }
