menambahkan fungsi meta dan jenis_kelamin donatur

--- a/app/views/admin/bantuan/index.html
+++ b/app/views/admin/bantuan/index.html
@@ -132,7 +132,7 @@
                                 <div class="d-flex align-items-start align-items-md-center flex-md-row justify-content-between gap-x-3 flex-column">
                                     <div class="font-weight-bolder overflow-hidden">
                                         <div class="media align-items-center">
-                                            <a href="#" data-id="<?= $data_bantuan->id_bantuan; ?>"
+                                            <a href="<?= '/admin/bantuan/data/' . $data_bantuan->id_bantuan; ?>" data-id="<?= $data_bantuan->id_bantuan; ?>"
                                                 class="d-flex flex-row">
                                                 <div class="name mb-0 text-sm">
                                                     <?= $data_bantuan->id_bantuan; ?>
