--- a/app/views/default.html
+++ b/app/views/default.html
@@ -5,15 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Tempat bagi gerakan kebaikan (social movement) dan kemanusiaan.">
-    <meta property="og:title" content="Pojok Berbagi Indonesia">
-    <meta property="og:url" content="https://pojokberbagi.id">
-    <meta property="og:description" content="Tempat bagi gerakan kebaikan (social movement) dan kemanusiaan.">
-    <meta property="og:image" content="https://pojokberbagi.id/assets/images/img-1-1000x600.jpg">
-    <meta property="og:image:width" content="300">
-    <meta property="og:image:height" content="169">
-    <meta property="og:image:alt" content="img-1-1000x600.jpg">
-    <meta property="og:type" content="website">
+    <?= $this->getMeta(); ?>
     <meta property="og:locale" content="id_ID">
     <meta property="og:locale:alternate" content="en_US">
     <meta property="og:locale:alternate" content="ar_QA">
