--- a/app/views/default/bantuan/detil.html
+++ b/app/views/default/bantuan/detil.html
@@ -141,7 +141,7 @@
             <div class="col-12 p-md-3 rounded-box">
                 <div class="row justify-content-center">
                     <?php if (isset($data['deskripsi'])) { ?>
-                    <div class="col-lg-8" id="selengkapnya">
+                    <div class="col-lg-8 px-md-0" id="selengkapnya">
                     </div>
                     <?php } else { ?>
                     
