--- a/public/assets/route/default/pages/css/detil.css
+++ b/public/assets/route/default/pages/css/detil.css
@@ -171,6 +171,10 @@ h6 {
     border-bottom-right-radius: 5px;
 }
 
+#deskripsi-selengkapnya-area .ql-editor {
+    padding: 0px;
+}
+
 @media (min-width: 320px) {
 
     #detil-banner-area .app-image.img-wrapper {
