mengubah ukuran font shere media

--- a/app/views/default/bantuan/detil.html
+++ b/app/views/default/bantuan/detil.html
@@ -117,7 +117,7 @@
         </div>
         
         <div class="row g-0 gap-3 gap-md-4 bg-white position-relative pt-2 pt-lg-3 ql-container ql-disabled mt-2 wow fadeInUp" id="deskripsi-selengkapnya-area" data-wow-delay="1.4s">
-            <div class="col-12 bg-green rounded-box p-3 d-flex align-items-center justify-content-between" id="title">
+            <div class="col-12 bg-green rounded-box p-3 d-flex align-items-center justify-content-between gap-3" id="title">
                 <div class="desc align-self-end">
                     <?php 
                         if (isset($data['deskripsi'])) {
@@ -131,7 +131,7 @@
                 </div>
                 <div class="btns">
                     <span class="m-0 fw-bolder fs-5">Bagikan</span>
-                    <div class="d-grid gap-3 align-items-center justify-content-end share" id="sharer">
+                    <div class="d-grid gap-1 align-items-center justify-content-end share" id="sharer">
                         <a target="_blank" href="https://twitter.com/pojok_berbagi" class="medsos-icon"><i class="lni lni-twitter-filled text-secondary"></i></a>
                         <a target="_blank" href="https://bit.ly/pojok-berbagi-indonesia"class="medsos-icon"><i class="lni lni-whatsapp text-secondary"></i></a>
                     </div>
